sventon change history
-----------------------------------------------------------------------------------------

[874] Added: Feature #1571 - Browse specific date instead of revision.
[860] Added: Feature #953 - Blame.
[859] Added: Upgraded to SVNKit 1.1.4.
[856] Added: Feature #3345 - More details in RSS body.
[845] Added: Feature #3477 - Configurable feed sizes.
[844] Added: Feature #3498 - Visual feedback when skipping directories.
[843] Added: Feature #3341 - Log message popup div.

[883] Release 1.2.0 (2007-09-08)

[851] Release 1.2 RC3 (2007-07-21)
[848] Fixed: Bug #11430 - Cache functionality doesn't work with file-protocol.
[847] Fixed: Bug #11595 - EntryCache memory consumption.
[840] Fixed: Bug #11251 - RSS feed creation error.

[836] Release 1.2 RC2 (2007-05-18)
[834] Added: Feature #3348 - Fix sort order in the instance list.
[832] Fixed: Bug #10991 - ZIP download does not support non USASCII.
[829] Fixed: Bug #10920 - Could not update cache instance.

[825] Release 1.2 RC1 (2007-04-03)
[809] Added: Feature #2939 - Store cache files gzipped.
[808] Added: Feature #3089 - context sensitive feeds.
[798] Added: Upgraded to SVNKit 1.1.1.
[789] Fixed: Bug #10253 - Caches for all instances are locked during update.
[788] Added: Feature #3018 - Add next/previous in revinfo view.
[785] Added: Feature #3108 - Display file type icons.
[784] Added: Feature #3030 - Bypass empty middle directories.
[766] Added: Feature #3013 - Store state of search mode radio button.
[763] Fixed: Bug #7106 - View files with different encoding.
[763] Fixed: Bug #9847 - Directories should not be possible to diff.
[729] Added: Feature #2884 - N Latest Commit Infos.
[729] Added: Feature #2748 - Revision details ajaxified.
[724] Added: Feature #2887 - Customizable RSS body.
[720] Added: Feature #2853 - Warn if repository url is not root.

[794] Release 1.1.0 (2007-02-18)

[782] Release 1.1 RC4 (2007-01-28)
[779] Fixed: Bug #10132 - Cache does not survive SIGKILL.